# oaqjp-final-project-emb-ai

./: emotion_detection.py
final_project/: pyproject.toml
final_project/EmotionDetection/: __init__.py  emotion_detection.py
final_project/EmotionDetection/tests/: test_emotion_detection.py
